@@ -90,6 +90,13 @@ class MessageStrings_ja extends MessageStrings
         2012 => 'ユーザー名とパスワードを確認して、もう一度ログインをしてください',
         2013 => 'ユーザー名ないしはパスワードが入力されていません',
         2014 => 'OAuth認証',
+        2015 => 'パスワードにアルファベットが含まれている必要があります',
+        2016 => 'パスワードに数字が含まれている必要があります',
+        2017 => 'パスワードに大文字のアルファベットが含まれている必要があります',
+        2018 => 'パスワードに小文字のアルファベットが含まれている必要があります',
+        2019 => 'パスワードに記号類が含まれている必要があります',
+        2020 => 'パスワードはユーザー名と異なる必要があります',
+        2021 => 'パスワードは@1@文字以上である必要があります',
         3101 => "アップロードするファイルを\nドラッグ&ドロップする",
         3102 => 'ドラッグしたファイル: ',
     );
