@@ -62,7 +62,7 @@ span.IM_POSTMESSAGE {
     position: relative;
 }
 ._im_authlabel   {
-    width: 100px;
+    width: 120px;
     text-align: right;
     float: left;
 }
